--- a/lectures/2-lists/lists-2.ipynb
+++ b/lectures/2-lists/lists-2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Программирование для всех\n",
+    "# Основы программирования в Python\n",
     "\n",
     "*Алла Тамбовцева, НИУ ВШЭ*"
    ]
