--- a/lectures/numpy.ipynb
+++ b/lectures/numpy.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python для анализа данных\n",
+    "# Основы программирования в Python\n",
     "\n",
     "*Алла Тамбовцева, НИУ ВШЭ*\n",
     "\n",
